--- a/pom.xml
+++ b/pom.xml
@@ -94,13 +94,13 @@
 	<distributionManagement>
 	    <repository>
 	      <id>nexus</id>
-	      <name>Landmark Technologies Releases Nexus Repository</name>
+	      <name>TheHeavenlys Releases Nexus Repository</name>
 	      <url>http://23.22.195.103:8181/TheHeavenlys/repository/tesla-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Landmark Technologies Snapshot Nexus Repository </name>
+	      <name>TheHeavenlys Snapshot Nexus Repository </name>
 	      <url>http://23.22.195.103:8181/TheHeavenlys/repository/tesla-snapshots/</url>
 	    </snapshotRepository>
 	    
